# rag

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  OLLAMA_SETUP.md  README.md  dangerous_content_test.py  example_usage.py  local_llm_demo.py  medical_chatbot_demo.py  pyproject.toml  simple_ollama_test.py
data/: medical_info.txt
src/: __init__.py  document_processor.py  enhanced_rag_pipeline.py  llm_factory.py  medical_chatbot.py  medical_validator.py  rag_pipeline.py  vector_store.py
tests/: test_rag.py
